--- a/PokerPlanning/Client/Pages/Components/UsersList.razor
+++ b/PokerPlanning/Client/Pages/Components/UsersList.razor
@@ -17,7 +17,7 @@
                     <MudListItem class="average">
                         <MudGrid>
                                 <MudItem xs="3"> Average</MudItem>
-                                <MudItem xs="3">@average(item)</MudItem>
+                            <MudItem xs="3">@average(item).ToString("0.##")</MudItem>
                         </MudGrid>
                     </MudListItem>
                 }
