--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -202,6 +202,8 @@ else
 
     private bool ModeratorOnly()
     {
+        var room = GetConnectedRoom();
+        if (Users.Values.Any(x => x.Role == Role.Moderator && x.Room == room))
         if (Users.Values.Any(x => x.Role == Role.Moderator))
         {
             if (role != Role.Moderator)
