--- a/PokerPlanning/Components/Pages/Rooms/Rooms.razor
+++ b/PokerPlanning/Components/Pages/Rooms/Rooms.razor
@@ -1,6 +1,6 @@
 ﻿@page "/rooms"
 @inject IDialogService DialogService
-@inject RoomService roomService
+@inject IRoomService roomService
 
 <div style="padding: 1em;">
     <h3>Rooms</h3>
