--- a/PokerPlanning/Components/Pages/Teams/Teams.razor
+++ b/PokerPlanning/Components/Pages/Teams/Teams.razor
@@ -1,6 +1,6 @@
 ﻿@page "/teams"
 @inject IDialogService DialogService
-@inject TeamService teamService
+@inject ITeamService teamService
 
 
 <h3>Teams</h3>
