--- a/PokerPlanning/Components/_Imports.razor
+++ b/PokerPlanning/Components/_Imports.razor
@@ -11,3 +11,5 @@
 @using PokerPlanning
 @using PokerPlanning.Components
 @using PokerPlanning.Components.Pages.Shared
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
