Upgrade and fixes using AI

--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inject IHubService _hubService;
 @inject IDialogService _dialogService
 @inherits LayoutComponentBase
+@using MudBlazor
 
 <CascadingValue Value="this">
     <MudThemeProvider Theme="MyCustomTheme" />
