Revert "Merge pull request #24 from jbridenthal/UpdateToNet10AndFixes"
This reverts commit 0c98b35ad3021bd241714b537df5ea9468c233c6, reversing
changes made to 7bcf20775e511423ea8e58998c91b1d455c59a04.

--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -22,8 +22,6 @@
 }
 else
 {
-    
-  @if(GetConnectedRoom() != LOBBY) { 
     <MudGrid  Class="d-flex justify-center flex-grow-1 gap-4">
         <MudItem xl="4">
             <MudContainer MaxWidth="MaxWidth.Medium">
@@ -67,16 +65,10 @@ else
             <UsersList Users=@Users ShowVotes="@showVotes" Room="@GetConnectedRoom()"></UsersList>
         </MudItem>
     </MudGrid>
-  }
-  else { <MudContainer MaxWidth="MaxWidth.Medium">
-      <RoomsList></RoomsList>
-      </MudContainer>
-  }
 }
 
 @code {
     const string LOCAL_STORAGE_NAME = "PokerPlanning.UserInfo";
-    const string LOBBY = "Lobby";
     private decimal customVote { get; set; }
     private string userName { get; set; } = string.Empty;
     private string userId = string.Empty;
@@ -210,14 +202,14 @@ else
     {
         if (Users != null && Users.ContainsKey(userId))
         {
-            return Users[userId].Room ?? LOBBY;
+            return Users[userId].Room ?? "Lobby";
         }
-        return LOBBY;
+        return "Lobby";
     }
 
     private bool ShowUsers()
     {
-        if (Users.Keys.Count() >= 0 && Users.ContainsKey(userId) && Users[userId].Room != LOBBY)
+        if (Users.Keys.Count() >= 0 && Users.ContainsKey(userId) && Users[userId].Room != "Lobby")
         {
             return true;
         }
