--- a/PokerPlanning/Client/_Imports.razor
+++ b/PokerPlanning/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using PokerPlanning.Client
 @using PokerPlanning.Client.Shared
 @using Microsoft.AspNetCore.SignalR.Client
+@using static PokerPlanning.Shared.Enums
 @using PokerPlanning.Shared
 @using MudBlazor
 @using PokerPlanning.Client.Pages.Components
